--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "pchainjs-tx",
-  "version": "1.0.5",
+  "version": "1.0.7",
   "description": "An simple module for creating, manipulating and signing pchain transactions",
   "main": "es5/index.js",
   "scripts": {
@@ -62,5 +62,16 @@
       "package-init.js",
       "package.js"
     ]
-  }
+  },
+  "contributors": [
+    {
+      "name": "skykingit",
+      "email": null,
+      "url": "https://github.com/skykingit",
+      "contributions": 3,
+      "additions": 37979,
+      "deletions": 155,
+      "hireable": null
+    }
+  ]
 }
